# Sayknow_CLI

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.roboskc  NOTICE.md  README.md  REPORT.md  biome.json  bunfig.toml  package.json
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dev-ci.yml  public-site-sync.yml
.plans/: 2026-07-03-skc-mcp-hardening.md
artifacts/: architecture-2349-eval.json  architecture-2383-eval.json  btw-fallback-ci-test-report.json  compaction-behavior-conclusion.md  compaction-frequency-analysis-v2.md  compaction-mining-v2.json  g001-package-qa-report.json  g001-toolrender-redteam-report.json  g003-release-0.10.1-report.json  g004-vb001-recovery-quality-gate.json  g005-final-qa-report.json  g005-quality-gate.json  g006-executor-qa.json  g006-final-qa-report.json  g006-quality-gate.json  g008-final-qa-report.json  g008-lifecycle-pty-capture.txt  g008-quality-gate.json  issue-2654-session-index-repair-report.json  provider-onboarding-ci-race-report.json  qa-interactive-refactor.json  qa-settings-core.json  qa-team-split.json  ultragoal-g002-context-ssot-harness.ts  ultragoal-g002-dogfood-report.json  ultragoal-g002-pty-capture.txt  vb001-qa-report.json
crates/brush-builtins-vendored/: README.md
crates/git-daemon/: README.md
crates/pi-ast/: Cargo.toml
crates/pi-ast/src/: ops.rs  summary.rs
crates/pi-ast/src/language/: parsers.rs
crates/pi-natives/: Cargo.toml
crates/skc-notifications/: Cargo.toml
docs/: ERRATA-GPT5-HARMONY.md  FORK_MAINTENANCE.md  REBRANDING_PLAN_260525.md  adr-sessions-dashboard.md  ai-schema-normalize.md  analyze-me-with-skc.md  aside-integration.md  auth-broker-gateway.md  bash-tool-runtime.md  bot-integration.md  bridge.md  codebase-overview.md  codegraph-custom-tool.md  composer-codex-parity.md  cpu-hotspot-map.json  discord-onboarding.md  environment-variables.md  external-control-readiness.md  extragoal-skill-template.md  geobench.md  git-daemon.md  gpt-5.6-codex-preset-benchmark.md  grok-build-provider-design.md  hermes-mcp-bridge.md  keybindings.md  lsp-config.md  models.md  multi-vendor-profiles.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-binding-contract.md  natives-build-release-debugging.md  natives-media-system-utils.md  natives-package-split-plan.md  natives-shell-pty-process.md  natives-text-search-pipeline.md  notebook-tool-runtime.md  notifications-sdk.md  onboarding-packet.md  onboarding-receipt.md  (+27 more)
docs/computer-use/: README.md
docs/prompt-architect-reports/: README.md  agent-prompts.raw.json  recovery-summary.md  skill-misc-prompts.raw.json  skill-misc-prompts.rerun.json  system-prompts.raw.md  system-prompts.rerun.json  tool-prompts.raw.md
docs/readme/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md
docs/tools/: ast-edit.md  bash.md  bisect.md  browser.md  computer.md  cron.md  debug.md  edit.md  eval.md  find.md  github.md  lsp.md  read.md  render_mermaid.md  rewind.md  search.md  ssh.md  task.md  web_search.md
geobench/: sayknow-cli.yaml
issues/: 01-command-dispatch-handler-exceptions-lose-id.md  02-command-dispatch-missing-enum-validation.md  03-unattended-negotiate-unvalidated-scopes-actions.md  04-unattended-control-commands-consume-tool-call-budget.md  05-unattended-mandatory-floor-not-enforced.md  06-skcrpc-sessionstate-missing-contextusage.md  07-skcrpc-missing-unattended-handoff-login-methods.md  08-skcrpc-tested-only-against-fake-server.md  09-rpc-no-persistent-detached-session.md  10-rpc-no-session-registry.md  12-rpc-emit-title-env-var-mismatch.md  13-rpc-serial-input-loop-head-of-line-blocking.md  14-credential-import-null-root-throws.md  15-ralplan-persistactiverunid-noop-skips-active-reassert.md  16-state-writer-lock-reaps-live-holder-after-stalems.md  19-rpc-listen-refusal-uncaught-and-socket-probe-over-broad.md  20-state-runtime-stamped-revision-post-lock-reread-race.md  README.md
plugins/.claude-plugin/: marketplace.json
plugins/sayknow-cli/: .codex.mcp.json  .mcp.json  README.md
python/decepticon-bridge/: .gitignore  README.md  pyproject.toml
python/decepticon-bridge/src/decepticon_bridge/: __init__.py  __main__.py  bridge.py  roster.py  runner.py  tools.py
python/decepticon-bridge/tests/: test_roster.py  test_runner.py  test_tools.py
python/roboskc/: AGENTS.md  README.md  entrypoint.sh  pyproject.toml
python/skc-rpc/: README.md  pyproject.toml
python/skc-rpc/src/skc_rpc/: __init__.py  client.py  protocol.py  registry.py
python/skc-rpc/tests/: test_client.py  test_client_workflow_gate.py  test_context_and_unattended.py  test_host_uris.py  test_protocol.py  test_real_binary.py  test_registry.py  test_user_group.py  test_workflow_gate.py  test_workflow_gate_redteam.py
rebrand/: identity.json  manifest.json
rebrand/overlay/: Cargo.toml  Dockerfile.roboskc.dockerignore  LICENSE  NOTICE.md  README.md  package.json
schemas/: config.schema.json  models.schema.json
scripts/: analyze_small_edits.py  apply-fork-identity.ts  apply-rebrand.ts  audit-skill-token-budget.ts  check-node20-baseline.test.ts  check-public-version-sync.test.ts  check-public-version-sync.ts  check-rust-scope.test.ts  check-rust-scope.ts  check-spoofed-versions.ts  check-visible-definitions.ts  ci-dev-affected-build-inventory.json  ci-dev-affected.test.ts  ci-dev-affected.ts  ci-job-relevance.ts  ci-release-build-binaries.ts  ci-release-publish.ts  ci-skc-state-gates.ts  ci-validate-darwin-receipt.ts  dev-link.test.ts  dev-link.ts  edit_benchmark_common.py  extract-fork-layer.ts  gen-tree.ts  generate-json-schemas.test.ts  generate-json-schemas.ts  generate-skc-plugins.ts  generate-skc-skill-command-refs.ts  generate-skc-workflow-manifest.ts  install.ps1  install.sh  mine-compaction-history.ts  publish-npm.ts  rate-edit-tool.py  rebrand-inventory.ts  release-evidence.test.ts  release-evidence.ts  release-policy.test.ts  release-publish-order.test.ts  release.ts  (+11 more)
(+290 files in other folders)
