[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "decepticon-bridge"
version = "0.1.0"
description = "Expose vendored Decepticon red-team agents to the skc coding agent as host tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jaybeyond" }]
keywords = ["skc", "decepticon", "red-team", "rpc", "agent", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

# The bridge core (roster / runner contract / host tools) depends only on
# the skc RPC client. The heavy Decepticon runtime is an *optional* extra
# because it requires Python 3.13 and a running service stack — the runner
# imports it lazily and degrades to a clear actionable error when absent.
dependencies = ["skc-rpc"]

[project.optional-dependencies]
# Pulls Decepticon from PyPI. To stay pinned to the vendored submodule
# commit instead, editable-install the in-tree packages (see README):
#   uv pip install -e vendor/decepticon/packages/decepticon-core \
#                  -e vendor/decepticon/packages/decepticon
redteam = ["decepticon>=1.0,<2"]
test = ["pytest>=8.0.0"]

[project.scripts]
decepticon-bridge = "decepticon_bridge.__main__:main"

[project.urls]
Homepage = "https://github.com/jaybeyond/Sayknow_CLI"
Repository = "https://github.com/jaybeyond/Sayknow_CLI"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
decepticon_bridge = ["py.typed"]
