[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "skc-rpc"
version = "0.1.0"
description = "Typed Python client for the skc coding-agent RPC protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jaybeyond" }]
keywords = ["skc", "rpc", "agent", "coding-agent", "jsonl", "stdio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/jaybeyond/Sayknow_CLI/"
Repository = "https://github.com/jaybeyond/Sayknow_CLI"
Documentation = "https://github.com/jaybeyond/Sayknow_CLI/blob/main/docs/rpc.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skc_rpc = ["py.typed"]
